==> ArminJo/android-blue-display/arduino/libraries/BlueDisplay/BlueSerial.cpp <==
#include <Arduino.h>
#include "BlueSerial.h"
#include "EventHandler.h"
#define MAX_NUMBER_OF_ARGS 12 // for sending
#define TOUCH_COMMAND_SIZE_BYTE_MAX  13 // for receiving
#define cbi(sfr, bit) (_SFR_BYTE(sfr) &= ~_BV(bit))
#define sbi(sfr, bit) (_SFR_BYTE(sfr) |= _BV(bit))

void sendUSARTBufferNoSizeCheck(uint8_t * aParameterBufferPointer, int aParameterBufferLength, uint8_t * aDataBufferPointer,
        int16_t aDataBufferLength) {
#ifdef USE_SIMPLE_SERIAL
    while (aParameterBufferLength > 0) {
        // wait for USART send buffer to become empty
        while (!((UCSR0A) & (1 << UDRE0))) {
            ;
        }
        //USART_SendData(USART3, *aBytePtr);
        UDR0 = *aParameterBufferPointer;
        aParameterBufferPointer++;
        aParameterBufferLength--;
    }
    while (aDataBufferLength > 0) {
        // wait for USART send buffer to become empty
        while (!((UCSR0A) & (1 << UDRE0))) {
            ;
        }
        //USART_SendData(USART3, *aBytePtr);
        UDR0 = *aDataBufferPointer;
        aDataBufferPointer++;
        aDataBufferLength--;
    }
#else
    Serial.write(aParameterBufferPointer, aParameterBufferLength);
    Serial.write(aDataBufferPointer, aDataBufferLength);
#endif
}
