==> ArminJo/android-blue-display/STM32/lib/blueDisplay/src/BlueSerial.cpp <==
#include "BlueSerial.h"
#include "EventHandler.h"
#include "timing.h"
#include "stm32fx0xPeripherals.h" // For Watchdog_reload()
#include <string.h> // for memcpy
#include <stdarg.h>  // for varargs
#define MAX_NUMBER_OF_ARGS 12 // for sending
#define TOUCH_COMMAND_SIZE_BYTE_MAX  TOUCH_CALLBACK_DATA_SIZE + 3 // for receiving plausi
#define UART_SEND_BUFFER_SIZE 1024
#define USART_RECEIVE_BUFFER_SIZE (TOUCH_COMMAND_SIZE_BYTE_MAX * 10 -1) // not a multiple of TOUCH_COMMAND_SIZE_BYTE in order to discover overruns

void sendUSARTBufferNoSizeCheck(uint8_t * aParameterBufferPointer, int aParameterBufferLength, uint8_t * aDataBufferPointer,
        int aDataBufferLength) {
#ifdef USE_SIMPLE_SERIAL
    sendUSARTBufferSimple(aParameterBufferPointer, aParameterBufferLength, aDataBufferPointer, aDataBufferLength);
return;
#else


    if (!sDMATransferOngoing) {
        // safe to reset buffer pointers since no transmit pending
        sUSARTSendBufferPointerOut = &USARTSendBuffer[0];
        sUSARTSendBufferPointerIn = &USARTSendBuffer[0];
    }
    uint8_t * tUSARTSendBufferPointerIn = sUSARTSendBufferPointerIn;
    int tSize = aParameterBufferLength + aDataBufferLength;
    /*
     * check (and wait) for enough free space
     */
    if (getSendBufferFreeSpace() < tSize) {
        // not enough space left - wait for transfer (chain) to complete or for size
        // get interrupt level
        uint32_t tISPR = (__get_IPSR() & 0xFF);
        setTimeoutMillis(300); // enough for 256 bytes at 9600
        while (sDMATransferOngoing) {
            // is needed here, because early watchdog ISR sends also data
#ifdef HAL_WWDG_MODULE_ENABLED
            Watchdog_reload();
#endif
            if (tISPR > 0) {
                // here in ISR, check manually for TransferComplete interrupt flag
                if (__HAL_UART_GET_FLAG(&UART_BD_Handle, UART_FLAG_TC) != RESET) {
                    // call ISR Handler manually
                    UART_BD_IRQHANDLER();
                    // Assertion
                    assert_param(__HAL_UART_GET_FLAG(&UART_BD_Handle, UART_FLAG_TC) == RESET);
                }
            }

            if (getSendBufferFreeSpace() >= tSize) {
                break;
            }
            if (isTimeoutSimple()) {
                // skip transfer, don't overwrite
                return;
            }
        }
    }

    /*
     * enough space here
     */
    uint8_t * tStartBufferPointer = tUSARTSendBufferPointerIn;

    int tBufferSizeToEndOfBuffer = (&USARTSendBuffer[UART_SEND_BUFFER_SIZE] - tUSARTSendBufferPointerIn);
    if (tBufferSizeToEndOfBuffer < tSize) {
        //transfer possible, but must be done in 2 chunks since DMA cannot handle buffer wrap around during a transfer
        tSize = tBufferSizeToEndOfBuffer; // set size for 1. chunk
        // copy parameter the hard way
        while (aParameterBufferLength > 0) {
            tUSARTSendBufferPointerIn = putSendBuffer(tUSARTSendBufferPointerIn, *aParameterBufferPointer++);
            aParameterBufferLength--;
        }
        //copy data
        while (aDataBufferLength > 0) {
            tUSARTSendBufferPointerIn = putSendBuffer(tUSARTSendBufferPointerIn, *aDataBufferPointer++);
            aDataBufferLength--;
        }
    } else {
        // copy parameter and data with memcpy
        memcpy((uint8_t *) tUSARTSendBufferPointerIn, aParameterBufferPointer, aParameterBufferLength);
        tUSARTSendBufferPointerIn += aParameterBufferLength;

        if (aDataBufferLength > 0) {
            memcpy((uint8_t *) tUSARTSendBufferPointerIn, aDataBufferPointer, aDataBufferLength);
            tUSARTSendBufferPointerIn += aDataBufferLength;
        }
        // check for buffer wrap around - happens if tBufferSizeToEndOfBuffer == tSize
        if (tUSARTSendBufferPointerIn >= &USARTSendBuffer[UART_SEND_BUFFER_SIZE]) {
            tUSARTSendBufferPointerIn = &USARTSendBuffer[0];
        }
    }
// the only statement which writes the variable sUSARTSendBufferPointerIn
    sUSARTSendBufferPointerIn = tUSARTSendBufferPointerIn;

// start DMA if not already running
    UART_BD_DMA_TX_start((uint32_t) tStartBufferPointer, tSize);
#endif
}
